# python-project-49

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
brain_games/: calc_logic.py  cli.py  consts.py  engine.py  gcd_logic.py  logic_for_brain_even.py  pattern_logic_brain.py
brain_games/games/: calc.py  calc_logic.py  calculator.py  even.py  gcd.py  gcd_logic.py  logic_for_brain_even.py  prime.py  prime_logic.py  progr.py  progression.py  progression_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
